--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/urs/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React Shadcn Starter</title>
-    <script type="module" crossorigin src="/urs/assets/index.0b515ab3.js"></script>
-    <link rel="stylesheet" href="/urs/assets/index.5a92679b.css">
+    <title>URS</title>
+    <script type="module" crossorigin src="/urs/assets/index.78244ba4.js"></script>
+    <link rel="stylesheet" href="/urs/assets/index.10c9e551.css">
   </head>
   <body class="min-h-screen">
     <div id="root" class="relative flex min-h-screen flex-col"></div>
